--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   
   <div class="row">
   <div class="column">
-    <img src="IMG_Main.jpg" alt="Snow" style="width:35%">
+    <img src="IMG_Main_1.png" alt="Snow" style="width:35%">
+  </div>
+    <div class="column">
+    <img src="IMG_Main_2.png" alt="Snow" style="width:35%">
   </div>
   </div>  
   </body>
